# pronto

./: .gitignore  README.md  compose.yaml  ros2_interfaces_repository.repos
DockerFiles/: Dockerfile
doc/: architecture.md
pi3hat_moteus_int_msgs/: CMakeLists.txt  package.xml
pi3hat_moteus_int_msgs/msg/: FeetPos.msg  JointsCommand.msg  JointsStates.msg  OmniMulinexCommand.msg  PacketPass.msg  QuadFootState.msg
pronto_core/: CMakeLists.txt  package.xml
pronto_core/include/pronto_core/: rbis_update_interface.hpp  vicon_module.hpp
pronto_core/src/: ins_module.cpp  rbis.cpp  rbis_update_interface.cpp  vicon_module.cpp
pronto_msgs/: CMakeLists.txt  package.xml
pronto_msgs/msg/: JointStateWithAcceleration.msg  QuadrupedForceTorqueSensors.msg
pronto_quadruped/: package.xml
pronto_quadruped/include/pronto_quadruped/: FlexEstimator.hpp  ImuBiasLock.hpp  LegOdometer.hpp  StanceEstimator.hpp
pronto_quadruped/src/: ImuBiasLock.cpp  LegOdometer.cpp  StanceEstimator.cpp
pronto_quadruped_commons/include/pronto_quadruped_commons/: feet_contact_forces.h
pronto_quadruped_ros/: CMakeLists.txt  package.xml
pronto_quadruped_ros/include/pronto_quadruped_ros/: bias_lock_handler_ros.hpp  conversions.hpp  dynamic_stance_estimator_ros.hpp  force_sensor_stance_estimator_ros.hpp  legodo_handler_ros.hpp  pronto_mammal_utilities.hpp  quad_model_parser.hpp  stance_estimator_ros.hpp
pronto_quadruped_ros/src/: bias_lock_handler_ros.cpp  conversions.cpp  dls_state_estimator_ros_node.cpp  dynamic_stance_estimator_ros.cpp  force_sensor_stance_estimator_ros.cpp  leg_odometer_ros.cpp  legodo_handler_ros.cpp  pronto_mammal_utilities.cpp  quad_model_parser.cpp  stance_estimator_ros.cpp
pronto_ros/: CMakeLists.txt  package.xml
pronto_ros/include/pronto_ros/: ins_ros_handler.hpp  pose_msg_ros_handler.hpp  pronto_node.hpp  pronto_ros_conversions.hpp  ros_frontend.hpp  scan_matcher_ros_handler.hpp
pronto_ros/src/: init_message_ros_handler.cpp  ins_ros_handler.cpp  joint_state_with_acceleration_republisher.cpp  pronto_ros_conversions.cpp  pronto_ros_node.cpp  ros_frontend.cpp  scan_matcher_ros_handler.cpp
pronto_ros2_node/: CMakeLists.txt  package.xml
pronto_ros2_node/config/: anymal_c_sim.yaml  omni_car.yaml  omnicar_tune_1.yaml  omnicar_tune_2.yaml  omnicar_tune_3.yaml  pronto_mulinex.yaml
pronto_ros2_node/include/pronto_ros2_node/: qualysis_mt.hpp  wheeled_odometry.hpp
pronto_ros2_node/launch/: bench_pronto.launch.py  pova.launch.py  pronto_mul_exp.launch.py  pronto_node.launch.py
pronto_ros2_node/src/: pronto_ros2_node.cpp  qualysis_mt.cpp  wheeled_odometry.cpp
pronto_solo12/: CMakeLists.txt
pronto_solo12/config/: solo12.urdf  state_estimator.yaml
pronto_solo12/include/pronto_solo12/: definitions.hpp  dynamics.hpp  feet_contact_forces.hpp  feet_jacobians.hpp  forward_kinematics.hpp  pronto_mammal_utilities.hpp  pronto_node.hpp
pronto_solo12/src/: dynamics.cpp  feet_contact_forces.cpp  feet_jacobians.cpp  pinocchio_node.cpp  pronto_estimator.cpp  pronto_mammal_utilities.cpp
pronto_tuning/: CMakeLists.txt  package.xml
pronto_tuning/config/: Exp_1_cmd.yaml  Exp_1_lateral.yaml  Exp_2_cmd.yaml  Exp_3_cmd.yaml  Exp_4_cmd.yaml  Exp_o_cmd.yaml  straight_motion.yaml  tuning_node_param.yaml
pronto_tuning/launch/: cmd_rec.launch.py  command_tuning.launch.py  experiments_pronto.launch.py  omnicar_exp.launch.py  omnicar_exp_teleop.launch.py
pronto_tuning/src/: command_node.cpp  tuning_node.cpp
pronto_utils/: CMakeLists.txt  package.xml
pronto_utils/src/: SchmittTrigger.cpp
