<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pronto_quadruped</name>
  <version>0.3.0</version>
  <description>The pronto_quadruped package</description>

  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <author email="mcamurri@robots.ox.ac.uk">Marco Camurri</author>
  <license>LGPLv2.1</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pronto_quadruped_commons</depend>
  <depend>pronto_core</depend>
  <depend>pronto_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
